# mate-rov-2026-crab-detection

./: .gitignore  Justfile  README.md  pixi.toml  pyproject.toml
scripts/: laptop_webcam_detect.py
src/crab_detection/: __init__.py  crab_detector.py  utils.py
tests/: test_build.py
