[project]
name = "crab-detection"
version = "0.1.0"
description = "library for crab detection for Task 2.1 Mitigate invasive species"
readme = "README.md"
authors = [
    { name = "omar-abdelgawad", email = "omar.abdelgawad@ejust.edu.eg" }
]
requires-python = ">=3.12"
dependencies = [
    # "albumentations>=2.0.8",
    "gdown",
    "opencv-python",
    "ultralytics",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
addopts = "--cov=crab_detection" #include all packages under src directory
testpaths = [
    "tests",
]

[tool.ruff]
lint.extend-select = ["I", "UP"]
fix = true
